@@ -76,15 +76,23 @@ import tudresden.ocl20.pivot.pivotmodel.util.ListUtil;
  * <p>
  * The following features are implemented:
  * <ul>
- *   <li>{@link tudresden.ocl20.pivot.pivotmodel.impl.TypeImpl#getOwnedTypeParameter <em>Owned Type Parameter</em>}</li>
- *   <li>{@link tudresden.ocl20.pivot.pivotmodel.impl.TypeImpl#getNamespace <em>Namespace</em>}</li>
- *   <li>{@link tudresden.ocl20.pivot.pivotmodel.impl.TypeImpl#getOwnedOperation <em>Owned Operation</em>}</li>
- *   <li>{@link tudresden.ocl20.pivot.pivotmodel.impl.TypeImpl#getOwnedProperty <em>Owned Property</em>}</li>
- *   <li>{@link tudresden.ocl20.pivot.pivotmodel.impl.TypeImpl#getSuperType <em>Super Type</em>}</li>
- *   <li>{@link tudresden.ocl20.pivot.pivotmodel.impl.TypeImpl#getGenericSuperType <em>Generic Super Type</em>}</li>
+ * <li>
+ * {@link tudresden.ocl20.pivot.pivotmodel.impl.TypeImpl#getOwnedTypeParameter
+ * <em>Owned Type Parameter</em>}</li>
+ * <li>{@link tudresden.ocl20.pivot.pivotmodel.impl.TypeImpl#getNamespace <em>
+ * Namespace</em>}</li>
+ * <li>{@link tudresden.ocl20.pivot.pivotmodel.impl.TypeImpl#getOwnedOperation
+ * <em>Owned Operation</em>}</li>
+ * <li>{@link tudresden.ocl20.pivot.pivotmodel.impl.TypeImpl#getOwnedProperty
+ * <em>Owned Property</em>}</li>
+ * <li>{@link tudresden.ocl20.pivot.pivotmodel.impl.TypeImpl#getSuperType <em>
+ * Super Type</em>}</li>
+ * <li>
+ * {@link tudresden.ocl20.pivot.pivotmodel.impl.TypeImpl#getGenericSuperType
+ * <em>Generic Super Type</em>}</li>
  * </ul>
  * </p>
- *
+ * 
  * @generated
  */
 public class TypeImpl extends NamedElementImpl implements Type {
@@ -106,9 +114,10 @@ public class TypeImpl extends NamedElementImpl implements Type {
 	protected EList<TypeParameter> ownedTypeParameter;
 
 	/**
-	 * The cached value of the '{@link #getOwnedOperation() <em>Owned Operation</em>}' containment reference list.
-	 * <!-- begin-user-doc
-	 * --> <!-- end-user-doc -->
+	 * The cached value of the '{@link #getOwnedOperation()
+	 * <em>Owned Operation</em>}' containment reference list. <!--
+	 * begin-user-doc --> <!-- end-user-doc -->
+	 * 
 	 * @see #getOwnedOperation()
 	 * @generated
 	 * @ordered
@@ -116,9 +125,10 @@ public class TypeImpl extends NamedElementImpl implements Type {
 	protected EList<Operation> ownedOperation;
 
 	/**
-	 * The cached value of the '{@link #getOwnedProperty() <em>Owned Property</em>}' containment reference list.
-	 * <!-- begin-user-doc
+	 * The cached value of the '{@link #getOwnedProperty()
+	 * <em>Owned Property</em>}' containment reference list. <!-- begin-user-doc
 	 * --> <!-- end-user-doc -->
+	 * 
 	 * @see #getOwnedProperty()
 	 * @generated
 	 * @ordered
@@ -126,8 +136,9 @@ public class TypeImpl extends NamedElementImpl implements Type {
 	protected EList<Property> ownedProperty;
 
 	/**
-	 * The cached value of the '{@link #getSuperType() <em>Super Type</em>}' reference list.
-	 * <!-- begin-user-doc --> <!-- end-user-doc -->
+	 * The cached value of the '{@link #getSuperType() <em>Super Type</em>}'
+	 * reference list. <!-- begin-user-doc --> <!-- end-user-doc -->
+	 * 
 	 * @see #getSuperType()
 	 * @generated
 	 * @ordered
@@ -153,6 +164,7 @@ public class TypeImpl extends NamedElementImpl implements Type {
 
 	/**
 	 * <!-- begin-user-doc --> <!-- end-user-doc -->
+	 * 
 	 * @generated
 	 */
 	protected TypeImpl() {
@@ -173,9 +185,9 @@ public class TypeImpl extends NamedElementImpl implements Type {
 
 	/**
 	 * The implementation in this class simply redirects to {
-	 * {@link #getSuperTypeGen()} which contains the code generated by EMF. Client
-	 * may, however, override this method to provide specific behaviour, e.g.,
-	 * adapt to other model repositories.
+	 * {@link #getSuperTypeGen()} which contains the code generated by EMF.
+	 * Client may, however, override this method to provide specific behaviour,
+	 * e.g., adapt to other model repositories.
 	 * 
 	 * @generated NOT
 	 */
@@ -187,6 +199,7 @@ public class TypeImpl extends NamedElementImpl implements Type {
 	/**
 	 * <!-- begin-user-doc -->The code generated for {{@link #getSuperType()} is
 	 * redirected to this method. <!-- end-user-doc -->
+	 * 
 	 * @generated
 	 */
 	protected final List<Type> getSuperTypeGen() {
@@ -199,6 +212,7 @@ public class TypeImpl extends NamedElementImpl implements Type {
 
 	/**
 	 * <!-- begin-user-doc --> <!-- end-user-doc -->
+	 * 
 	 * @generated
 	 */
 	public List<GenericType> getGenericSuperType() {
@@ -224,8 +238,8 @@ public class TypeImpl extends NamedElementImpl implements Type {
 	}
 
 	/**
-	 * The code generated for {{@link #getOwnedOperation()} is redirected to this
-	 * method.
+	 * The code generated for {{@link #getOwnedOperation()} is redirected to
+	 * this method.
 	 * 
 	 * @generated
 	 */
@@ -285,6 +299,7 @@ public class TypeImpl extends NamedElementImpl implements Type {
 	 * <!-- begin-user-doc -->The code generated for {
 	 * {@link #getOwnedTypeParameterGen()} is redirected to this method.<!--
 	 * end-user-doc -->
+	 * 
 	 * @generated
 	 */
 	protected final List<TypeParameter> getOwnedTypeParameterGen() {
@@ -299,6 +314,7 @@ public class TypeImpl extends NamedElementImpl implements Type {
 
 	/**
 	 * <!-- begin-user-doc --> <!-- end-user-doc -->
+	 * 
 	 * @generated
 	 */
 	public Namespace getNamespace() {
@@ -309,6 +325,7 @@ public class TypeImpl extends NamedElementImpl implements Type {
 
 	/**
 	 * <!-- begin-user-doc --> <!-- end-user-doc -->
+	 * 
 	 * @generated
 	 */
 	public NotificationChain basicSetNamespace(Namespace newNamespace,
@@ -320,6 +337,7 @@ public class TypeImpl extends NamedElementImpl implements Type {
 
 	/**
 	 * <!-- begin-user-doc --> <!-- end-user-doc -->
+	 * 
 	 * @generated
 	 */
 	public void setNamespace(Namespace newNamespace) {
@@ -365,7 +383,8 @@ public class TypeImpl extends NamedElementImpl implements Type {
 			conformant = true;
 		}
 
-		// a type conforms to another type if one if its supertypes conforms to the
+		// a type conforms to another type if one if its supertypes conforms to
+		// the
 		// other type
 		else {
 			for (Type superType : getSuperType()) {
@@ -413,7 +432,8 @@ public class TypeImpl extends NamedElementImpl implements Type {
 
 		// else check inheritance hierachies of this and the other type
 		else {
-			// the super types in one inheritance level for this and the other type,
+			// the super types in one inheritance level for this and the other
+			// type,
 			// respectively, and the transitive closure of all types in both
 			// hierachies
 			Set<Type> thisSuperTypes, otherSuperTypes, allThisTypes, allOtherTypes;
@@ -437,7 +457,8 @@ public class TypeImpl extends NamedElementImpl implements Type {
 				allThisTypes.addAll(thisSuperTypes);
 				allOtherTypes.addAll(otherSuperTypes);
 
-				// check if one of this type's current supertypes is contained in the
+				// check if one of this type's current supertypes is contained
+				// in the
 				// other type's hierarchy
 				for (Type type : thisSuperTypes) {
 
@@ -459,7 +480,8 @@ public class TypeImpl extends NamedElementImpl implements Type {
 				thisSuperTypes.addAll(temp);
 				temp.clear();
 
-				// check if one of the other type's current supertypes is contained in
+				// check if one of the other type's current supertypes is
+				// contained in
 				// this type's hierarchy
 				for (Type type : otherSuperTypes) {
 
@@ -498,17 +520,44 @@ public class TypeImpl extends NamedElementImpl implements Type {
 	 */
 	public List<Property> allProperties() {
 
-		Set<Property> allProperties = new HashSet<Property>();
+		List<Property> allProperties = new ArrayList<Property>();
 
-		// add the properties of this type
-		allProperties.addAll(getOwnedProperty());
+		Set<String> visibleProperties = new HashSet<String>();
+		Set<Type> typesToVisit = new HashSet<Type>();
+		Set<Type> visitedTypes = new HashSet<Type>();
 
-		// add the properties of super types
-		for (Type superType : getSuperType()) {
-			allProperties.addAll(superType.allProperties());
+		typesToVisit.add(this);
+
+		while (!typesToVisit.isEmpty()) {
+
+			Type currentType = typesToVisit.iterator().next();
+			typesToVisit.remove(currentType);
+			visitedTypes.add(currentType);
+
+			/* Add the properties of this type */
+			for (Property property : currentType.getOwnedProperty()) {
+				/*
+				 * Check if a property is shadowed by another property of a sub
+				 * type.
+				 */
+				if (!visibleProperties.contains(property.getName())) {
+					allProperties.add(property);
+					visibleProperties.add(property.getName());
+				}
+				// no else.
+			}
+			// end for.
+
+			for (Type type : currentType.getSuperType()) {
+				if (!visitedTypes.contains(type))
+					typesToVisit.add(type);
+				// no else.
+			}
+			// end for.
 		}
+		// end while.
 
-		return new ArrayList<Property>(allProperties);
+		return allProperties;
 	}
 
 	/**
@@ -609,7 +658,8 @@ public class TypeImpl extends NamedElementImpl implements Type {
 			logger.debug("addProperty(p=" + property + ") - enter"); //$NON-NLS-1$ //$NON-NLS-2$
 		}
 
-		// use the generated method, not the client-specific list obtained through
+		// use the generated method, not the client-specific list obtained
+		// through
 		// getOwnedProperty()
 		getOwnedPropertyGen().add(property);
 
@@ -631,7 +681,8 @@ public class TypeImpl extends NamedElementImpl implements Type {
 			logger.debug("addOperation(o=" + operation + ") - enter"); //$NON-NLS-1$ //$NON-NLS-2$
 		}
 
-		// use the generated method, not the client-specific list obtained through
+		// use the generated method, not the client-specific list obtained
+		// through
 		// getOwnedOperation()
 		getOwnedOperationGen().add(operation);
 
@@ -653,7 +704,8 @@ public class TypeImpl extends NamedElementImpl implements Type {
 			logger.debug("addSuperType(t=" + type + ") - enter"); //$NON-NLS-1$ //$NON-NLS-2$
 		}
 
-		// use the generated method, not the client-specific list obtained through
+		// use the generated method, not the client-specific list obtained
+		// through
 		// getSuperType()
 		getSuperTypeGen().add(type);
 
@@ -678,8 +730,8 @@ public class TypeImpl extends NamedElementImpl implements Type {
 		boolean result;
 
 		/*
-		 * Use the generated method, not the client-specific list obtained through
-		 * getOwnedProperty().
+		 * Use the generated method, not the client-specific list obtained
+		 * through getOwnedProperty().
 		 */
 		result = this.getOwnedPropertyGen().remove(property);
 
@@ -692,6 +744,7 @@ public class TypeImpl extends NamedElementImpl implements Type {
 
 	/**
 	 * <!-- begin-user-doc --> <!-- end-user-doc -->
+	 * 
 	 * @generated NOT
 	 */
 	public boolean removeOperation(Operation operation) {
@@ -703,8 +756,8 @@ public class TypeImpl extends NamedElementImpl implements Type {
 		boolean result;
 
 		/*
-		 * Use the generated method, not the client-specific list obtained through
-		 * getOwnedOperation().
+		 * Use the generated method, not the client-specific list obtained
+		 * through getOwnedOperation().
 		 */
 		result = this.getOwnedOperationGen().remove(operation);
 
@@ -727,7 +780,8 @@ public class TypeImpl extends NamedElementImpl implements Type {
 					+ ") - enter"); //$NON-NLS-1$
 		}
 
-		// use the generated method, not the one that may be overridden by clients
+		// use the generated method, not the one that may be overridden by
+		// clients
 		getOwnedTypeParameterGen().add(typeParameter);
 
 		if (logger.isDebugEnabled()) {
@@ -742,8 +796,8 @@ public class TypeImpl extends NamedElementImpl implements Type {
 	 * {@link GenericElement#bindTypeParameter()}. Note that the lists for
 	 * <code>parameters</code> and <code>types</code> must support comparison of
 	 * elements via equality, not identity. In particular, this means that Ecore
-	 * {@link EObjectEList}s should be copied into a new list before calling this
-	 * method.
+	 * {@link EObjectEList}s should be copied into a new list before calling
+	 * this method.
 	 * 
 	 * @generated NOT
 	 */
@@ -773,7 +827,8 @@ public class TypeImpl extends NamedElementImpl implements Type {
 			// remove the type parameters that are going to be bound
 			ListUtil.removeAll(boundType.getOwnedTypeParameter(), parameters);
 
-			// cache early to prevent endless loop if type is required while binding
+			// cache early to prevent endless loop if type is required while
+			// binding
 			boundTypes.put(binding, boundType);
 
 			// bind all properties
@@ -791,7 +846,8 @@ public class TypeImpl extends NamedElementImpl implements Type {
 					.iterator(); it.hasNext();) {
 				GenericType genericSuperType = it.next();
 
-				// if generic super type was successfully bound, remove it from the type
+				// if generic super type was successfully bound, remove it from
+				// the type
 				if (genericSuperType.bindGenericSuperType(parameters, types,
 						boundType)) {
 					it.remove();
@@ -822,6 +878,7 @@ public class TypeImpl extends NamedElementImpl implements Type {
 
 	/*
 	 * (non-Javadoc)
+	 * 
 	 * @see java.lang.Object#clone()
 	 */
 	@Override
@@ -853,7 +910,8 @@ public class TypeImpl extends NamedElementImpl implements Type {
 			clone.addOperation(operation.clone());
 		}
 
-		// copy supertype list; do not clone the super types because they are not
+		// copy supertype list; do not clone the super types because they are
+		// not
 		// contained by this type
 		for (Type superType : getSuperType()) {
 			clone.addSuperType(superType);
@@ -869,6 +927,7 @@ public class TypeImpl extends NamedElementImpl implements Type {
 
 	/**
 	 * <!-- begin-user-doc --> <!-- end-user-doc -->
+	 * 
 	 * @generated
 	 */
 	@SuppressWarnings("unchecked")
@@ -895,6 +954,7 @@ public class TypeImpl extends NamedElementImpl implements Type {
 
 	/**
 	 * <!-- begin-user-doc --> <!-- end-user-doc -->
+	 * 
 	 * @generated
 	 */
 	@Override
@@ -921,6 +981,7 @@ public class TypeImpl extends NamedElementImpl implements Type {
 
 	/**
 	 * <!-- begin-user-doc --> <!-- end-user-doc -->
+	 * 
 	 * @generated
 	 */
 	@Override
@@ -937,6 +998,7 @@ public class TypeImpl extends NamedElementImpl implements Type {
 
 	/**
 	 * <!-- begin-user-doc --> <!-- end-user-doc -->
+	 * 
 	 * @generated
 	 */
 	@Override
@@ -960,6 +1022,7 @@ public class TypeImpl extends NamedElementImpl implements Type {
 
 	/**
 	 * <!-- begin-user-doc --> <!-- end-user-doc -->
+	 * 
 	 * @generated
 	 */
 	@SuppressWarnings("unchecked")
@@ -999,6 +1062,7 @@ public class TypeImpl extends NamedElementImpl implements Type {
 
 	/**
 	 * <!-- begin-user-doc --> <!-- end-user-doc -->
+	 * 
 	 * @generated
 	 */
 	@Override
@@ -1028,6 +1092,7 @@ public class TypeImpl extends NamedElementImpl implements Type {
 
 	/**
 	 * <!-- begin-user-doc --> <!-- end-user-doc -->
+	 * 
 	 * @generated
 	 */
 	@Override
@@ -1051,6 +1116,7 @@ public class TypeImpl extends NamedElementImpl implements Type {
 
 	/**
 	 * <!-- begin-user-doc --> <!-- end-user-doc -->
+	 * 
 	 * @generated
 	 */
 	@Override
@@ -1074,6 +1140,7 @@ public class TypeImpl extends NamedElementImpl implements Type {
 
 	/**
 	 * <!-- begin-user-doc --> <!-- end-user-doc -->
+	 * 
 	 * @generated
 	 */
 	@Override
@@ -1097,6 +1164,7 @@ public class TypeImpl extends NamedElementImpl implements Type {
 
 	/**
 	 * <!-- begin-user-doc --> <!-- end-user-doc -->
+	 * 
 	 * @generated
 	 */
 	@Override
@@ -1105,8 +1173,8 @@ public class TypeImpl extends NamedElementImpl implements Type {
 	}
 
 	/**
-	 * Returns a string representing this <code>Type</code>. Includes its name and
-	 * namespace.
+	 * Returns a string representing this <code>Type</code>. Includes its name
+	 * and namespace.
 	 * 
 	 * @see java.lang.Object#toString()
 	 */
@@ -1141,7 +1209,7 @@ public class TypeImpl extends NamedElementImpl implements Type {
 	 * {@link #conformsTo(Type) type conformance} correctly.
 	 * 
 	 * @param obj
-	 *          the other object to test for equality
+	 *            the other object to test for equality
 	 * 
 	 * @return <code>true</code> if the other object is a <code>Type</code> with
 	 *         the same qualified name, <code>false</code> otherwise
